[package]
name = "waldl"
description = "A command line wallpaper downloader"
author = "Jobin Nelson"
version = "0.2.1"
repository = "https://github.com/jobin-nelson/waldl"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
